# ego-planner-v2-ros2

./: .gitignore  README.md
swarm-playground/main_ws/src/Utils/assign_goals/: CMakeLists.txt  package.xml
swarm-playground/main_ws/src/Utils/assign_goals/src/: assign_goals_node.cpp
swarm-playground/main_ws/src/Utils/manual_take_over/: CMakeLists.txt  package.xml
swarm-playground/main_ws/src/Utils/manual_take_over/launch/: take_over_drone.launch.py  take_over_station.launch.py
swarm-playground/main_ws/src/Utils/manual_take_over/src/: ground_station.cpp  manual_take_over.cpp
swarm-playground/main_ws/src/Utils/moving_obstacles/: CMakeLists.txt  package.xml
swarm-playground/main_ws/src/Utils/moving_obstacles/launch/: obstacle_run.launch.py  second_joystick.launch.py  third_joystick.launch.py
swarm-playground/main_ws/src/Utils/moving_obstacles/src/: moving_obstacles.cpp
swarm-playground/main_ws/src/Utils/quadrotor_msgs/: CMakeLists.txt
swarm-playground/main_ws/src/Utils/random_goals/: CMakeLists.txt  package.xml
swarm-playground/main_ws/src/Utils/random_goals/src/: random_goals_node.cpp
swarm-playground/main_ws/src/planner/path_searching/: CMakeLists.txt
swarm-playground/main_ws/src/planner/path_searching/include/path_searching/: dyn_a_star.h
swarm-playground/main_ws/src/planner/path_searching/src/: dyn_a_star.cpp
swarm-playground/main_ws/src/planner/plan_env/: CMakeLists.txt  package.xml
swarm-playground/main_ws/src/planner/plan_env/include/plan_env/: grid_map.h
swarm-playground/main_ws/src/planner/plan_env/src/: grid_map.cpp
swarm-playground/main_ws/src/planner/plan_manage/: CMakeLists.txt  package.xml
swarm-playground/main_ws/src/planner/plan_manage/include/plan_manage/: ego_replan_fsm.h  planner_manager.h
swarm-playground/main_ws/src/planner/plan_manage/launch/: autoflight.launch.py  circle_exchange.launch.py  circle_exchange_large.launch.py  moving_obstacles_avoidance.launch.py  multi_drone_interactive.launch.py  rviz.launch.py  single_drone_interactive.launch.py  single_drone_waypoints.launch.py  swarm.launch.py  swarm_large.launch.py  test.launch.py
swarm-playground/main_ws/src/planner/plan_manage/launch/include/: advanced_param.launch.py  run_in_sim.launch.py  simulator.launch.py  single_interactive.rviz
swarm-playground/main_ws/src/planner/plan_manage/launch_old/include/: simulator.xml
swarm-playground/main_ws/src/planner/plan_manage/src/: ego_planner_node.cpp  ego_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
swarm-playground/main_ws/src/planner/swarm_bridge/: CMakeLists.txt  package.xml
swarm-playground/main_ws/src/planner/swarm_bridge/include/: reliable_bridge.hpp
swarm-playground/main_ws/src/planner/swarm_bridge/launch/: bridge_tcp_drone.launch.py  bridge_tcp_station.launch.py  bridge_udp.launch.py
swarm-playground/main_ws/src/planner/swarm_bridge/src/: bridge_node_tcp.cpp  bridge_node_udp.cpp  traj2odom_node.cpp
swarm-playground/main_ws/src/planner/traj_opt/: CMakeLists.txt  package.xml
swarm-playground/main_ws/src/planner/traj_opt/include/optimizer/: poly_traj_optimizer.h  poly_traj_utils.hpp
swarm-playground/main_ws/src/planner/traj_opt/src/: poly_traj_optimizer.cpp
swarm-playground/main_ws/src/planner/traj_utils/: CMakeLists.txt
swarm-playground/main_ws/src/planner/traj_utils/include/traj_utils/: plan_container.hpp  planning_visualization.h
swarm-playground/main_ws/src/planner/traj_utils/msg/: MINCOTraj.msg
swarm-playground/main_ws/src/planner/traj_utils/src/: planning_visualization.cpp
swarm-playground/main_ws/src/uav_simulator/map_processor/: CMakeLists.txt  package.xml
swarm-playground/main_ws/src/uav_simulator/map_processor/config/: map_processor_params.yaml
swarm-playground/main_ws/src/uav_simulator/map_processor/launch/: map_processor.launch.py
swarm-playground/main_ws/src/uav_simulator/map_processor/maps/: sample_data3.csv
swarm-playground/main_ws/src/uav_simulator/map_processor/src/: map_processor_node.cpp
