<?xml version="1.0"?>
<package format="3">
  <name>assign_goals</name>
  <version>0.0.0</version>
  <description>The assign_goals package</description>

  <maintainer email="iszhouxin@zju.edu.cn">iszhouxin</maintainer>

  <license>TODO</license> <!-- Replace TODO with an actual license like MIT, BSD, or LGPL -->

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>traj_utils</depend>
  <depend>quadrotor_msgs</depend>
  <depend>uav_utils</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
