<?xml version="1.0"?>
<package format="3">
  <name>manual_take_over</name>
  <version>0.0.0</version>
  <description>The manual_take_over package</description>

  <maintainer email="iszhouxin@zju.edu.cn">iszhouxin</maintainer>
  <license>TODO</license> <!-- Replace with a valid license like MIT, BSD, etc. -->

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>quadrotor_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
