<?xml version="1.0"?>
<package format="3">
  <name>moving_obstacles</name>
  <version>0.1.0</version>
  <description>ROS 2 package for handling dynamic/moving obstacles in trajectory optimization.</description>

  <maintainer email="iszhouxin@zju.edu.cn">iszhouxin</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>traj_opt</build_depend>
  <build_depend>traj_utils</build_depend>
  <build_depend>eigen3_cmake_module</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>traj_opt</exec_depend>
  <exec_depend>traj_utils</exec_depend>

  <!-- Test dependencies (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export ament build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
