<?xml version="1.0"?>
<package format="3">
  <name>random_goals</name>
  <version>0.0.0</version>
  <description>The random_goals package</description>

  <maintainer email="iszhouxin@zju.edu.cn">iszhouxin</maintainer>

  <license>TODO</license> <!-- Replace with actual license, e.g., MIT, BSD, etc. -->

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>traj_utils</depend>
  <depend>quadrotor_msgs</depend>
  <depend>uav_utils</depend>

  <!-- Export section (optional for ament-based packages) -->
  <export>
  </export>
</package>
